refs/ps/testcases/A3/Testcases/Error/tc5.c
void main()
{
    float f;
    int a, res;
    f = 2.37;
    a = 1;
    res = a+f;
    print f;
    print res;
}